# datalog

./: .gitignore  .travis.yml  Cargo.toml  Justfile  README.md
misc/vim/ftdetect/: datalog.vim
misc/vim/syntax/: datalog.vim
proptest-regressions/ast/: mod.txt  name.txt  variable.txt
sandbox/: README.md  fruits.dl  graph.dl
src/: errors.rs  lib.rs  main.rs  util.rs
src/ast/: eq.rs  mod.rs  name.rs  pattern_match.rs  print.rs  styles.rs  symbol.rs  variable.rs
src/naive/: mod.rs
src/parser/: ast_tests.rs  convert.rs  cst_tests.rs  datalog.pest  mod.rs  utils.rs
