[package]
name = "datalog"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
clap = "2.29.1"
error-chain = "0.11.0"
liner = "0.4.4"
pest = "1.0.0-beta"
pest_derive = "1.0.0-beta"
pretty = "0.3.3"
sparkly = { version = "0.1.2", features = ["termion"] }
symbol = "0.1.0"
