[package]
name = "datalog"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
clap = "2.29.1"
error-chain = "0.11.0"
liner = "0.4.4"
pest = "1.0.0-beta"
pest_derive = "1.0.0-beta"
sparkly = { version = "0.1.4", features = ["termion"] }
symbol = "0.1.0"

[dev-dependencies]
proptest = "0.4.0"
regex = "0.2.5"
lazy_static = "1.0.0"
